book/tests/snapshots/snapshot__tests__prql__examples__list-equivalence-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive [\n  gross_salary = salary + payroll_tax,\n  gross_cost = gross_salary + benefits_cost\n]\n"
---
from employees
derive [
  gross_salary = salary + payroll_tax,
  gross_cost = gross_salary + benefits_cost,
]



