book/tests/snapshots/snapshot__tests__prql__examples__list-equivalence-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive gross_salary = salary + payroll_tax\nderive gross_cost = gross_salary + benefits_cost\n"
---
from employees
derive gross_salary = salary + payroll_tax
derive gross_cost = gross_salary + benefits_cost



