book/tests/snapshots/snapshot__tests__prql__examples__misc-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "# TODO: this table should have a column `part` with values 1..5,\n# but such data declaration is not yet supported, see #286\nlet parts = (\n    from seq_1_to_5\n)\n\nfrom pl=prospect_lists_prospects\nfilter prospect_list_id == 'cc675eee-8bd1-237f-be5e-622ba511d65e'\njoin a=accounts [a.id == pl.related_id]\njoin er=email_addr_bean_rel [er.bean_id == a.id and er.primary_address == '1']\njoin ea=email_addresses [ea.id == er.email_address_id]\nselect ea.email_address\nderive prefix = s\"regexp_replace(SUBSTRING_INDEX({email_address}, '@', 1), '[.0-9-_:]+', '.')\"\nderive stub = s\"SUBSTRING_INDEX(SUBSTRING_INDEX({prefix}, '.', part), '.', -1)\"\nselect [email_address, stub]\n"
---
let parts = (
  from seq_1_to_5
)



from pl = prospect_lists_prospects
filter prospect_list_id == "cc675eee-8bd1-237f-be5e-622ba511d65e"
join a = accounts [a.id == pl.related_id]
join er = email_addr_bean_rel [er.bean_id == a.id and er.primary_address == "1"]
join ea = email_addresses [ea.id == er.email_address_id]
select ea.email_address
derive prefix = s"regexp_replace(SUBSTRING_INDEX({email_address}, '@', 1), '[.0-9-_:]+', '.')"
derive stub = s"SUBSTRING_INDEX(SUBSTRING_INDEX({prefix}, '.', part), '.', -1)"
select [
  email_address,
  stub,
]



