book/tests/snapshots/snapshot__tests__prql__examples__misc-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from club_ratings\nfilter rating != null\n# TODO: this is real ugly. `average rating` should not require parenthesis\n# TODO: why cannot we put comments in group's pipeline?\ngroup year (\n    derive [rating_norm = rating - (average rating) / (stddev rating)]\n)\n"
---
from club_ratings
filter rating != null
group year (
  derive [rating_norm = rating - ( average rating ) / ( stddev rating )]
)



